# baidupan-cli

./: .gitignore  LICENSE  MEMORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cmd/: bdpan-cli.py
deploy/gcp/: baidupan-cli.service  install.sh
docs/: ARCHITECTURE.md
examples/: minimal_upload_share.py
sdk/python/: README.md
src/bdpan_wrapper/: __main__.py  cli.py  config.py  enums.py  models.py  services.py  task_store.py
src/bdpan_wrapper/accounts/: __init__.py  models.py  service.py  store.py
src/bdpan_wrapper/api/: __init__.py  app.py
src/bdpan_wrapper/api/static/: index.html  portal.css  portal.js
src/bdpan_wrapper/bdpan/: __init__.py  adapter.py  parser.py
src/bdpan_wrapper/runtime/: __init__.py  builder.py
tests/: test_api.py  test_bdpan_adapter.py  test_cli.py  test_runtime.py  test_services.py
